0.10 to current

	Added example of using xsel to sample vifmrc file.  Thanks to
	chelovechishko.

	Added fileroot view column, which displays full name of directories and
	symbolic links to directories and only root of name for everything else.
	Thanks to chelovechishko.

	Added :cds command that navigates to path obtained by substitution in
	current path.  Thanks to j-xella.

	Resolve symbolic links for mime-type matchers.  Thanks to Vigi.

	Try to preserve symbolic links in current path when starting vifm by
	checking value of $PWD.  Thanks to Vigi.

	Better documentation for TabLine and TabLineSel highlighting groups.
	Thanks to mwgkgk.

	Always preserve tabs on :restart.  Thanks to mwgkgk.

	Clearer documentation/description for :*unmap commands and
	'vicmd'/'vixcmd' options.  Thanks to chelovechishko.

	Fixed `:tabnew ..` not working due to use of uninitialized data.

	Fixed access to uninitialized memory on clearing view after graphical
	preview.

	Fixed possible crashes after certain patterns of using view mode and
	closing tabs.

	Fixed some resources (like output pipe for --choose-files and
	--choose-dir) being inherited by child processes.  Thanks to Vigi.

	Fixed CWD of the process not always matching current view right after
	startup.  Patch by Daniel Mueller.

	Fixed global substitution with patterns beginning with a caret again.

0.10-beta to 0.10 (2018-11-11)

	Display list of files in removal confirmation dialog.  Thanks to ovk.

	Support embedded terminal in the plugin for newer Vim.

	Return "broken" from filetype({fnum}, 1) for inaccessible link target.
	Thanks to filterfalse.

	Avoid unnecessary reloading file list after pressing "=" to enter local
	filter.

	Fixed crash on pasting elements of paths that contain broken UTF-8
	sequences into command-line using Ctrl-X + key.  Thanks to Jose
	Riha (a.k.a. jose1711).

	Fixed extra unlisted buffer beeing kept around in neovim on :*Vifm
	commands.  Thanks to randomizedthinking.
