@@ -708,6 +708,50 @@ cs_load_primary(const char name[])
 	cfg.cs.state = CSS_NORMAL;
 }
 
+void
+cs_load_primary_list(char *names[], int count)
+{
+	col_scheme_t prev_cs = {};
+	cs_assign(&prev_cs, &cfg.cs);
+
+	while(count-- > 0)
+	{
+		const char *name = *names++;
+
+		cs_assign(&cfg.cs, &prev_cs);
+		curr_stats.cs = &cfg.cs;
+		cfg.cs.state = CSS_LOADING;
+
+		if(!cs_exists(name))
+		{
+			continue;
+		}
+
+		if(source_cs(name) != 0)
+		{
+			show_error_msgf("Color Scheme Sourcing",
+					"An error occurred on sourcing color scheme: \"%s\"", name);
+			continue;
+		}
+
+		check_cs(&cfg.cs);
+		if(cfg.cs.state == CSS_DEFAULTED)
+		{
+			continue;
+		}
+
+		copy_str(cfg.cs.name, sizeof(cfg.cs.name), name);
+		update_attributes();
+
+		free_cs_highlights(&prev_cs);
+		cfg.cs.state = CSS_NORMAL;
+
+		return;
+	}
+
+	restore_primary_cs(&prev_cs);
+}
+
 /* Restore previous state of primary color scheme. */
 static void
 restore_primary_cs(const col_scheme_t *cs)
